fix z-index for open select

--- a/src/styles/vendor-css/react-select.css
+++ b/src/styles/vendor-css/react-select.css
@@ -8,6 +8,11 @@
 .Select {
   position: relative;
 }
+
+.Select.is-open {
+    z-index: 3000;
+}
+
 .Select-control {
   position: relative;
   overflow: hidden;
@@ -153,7 +158,7 @@
   position: absolute;
   top: 100%;
   width: 100%;
-  z-index: 3000;
+  z-index: 1000;
   -webkit-overflow-scrolling: touch;
 }
 .Select-menu {
